# the-batch-reader

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  hook.sh  justfile  pyproject.toml
docs/plans/: 2026-02-22-multilingual-speech-converter-design.md  2026-02-22-multilingual-speech-converter-plan.md
src/: combine_transcripts.py  crawler.py  fetch_article.py  speech_text.py  transcript.py
src/languages/: __init__.py  de.py  en.py
tests/: test_speech_text.py  test_speech_text_de.py
