[project]
name = "andrews-batch-reader"
version = "0.1.0"
description = "A batch reader utility for processing files"
requires-python = ">=3.12"
dependencies = [
    "scrapy>=2.11.0",
    "scrapy-playwright>=0.0.40",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
